--- a/src/blocks/card/__like-button/card__like-button.css
+++ b/src/blocks/card/__like-button/card__like-button.css
@@ -1,8 +1,7 @@
 .card__like-button {
   width: 21px;
   height: 18px;
-  background: transparent url('../../../images/like-inactive.svg') no-repeat;
-  
+  background: transparent url("../../../images/like-inactive.svg") no-repeat;
   background-size: 21px 18px;
   border: none;
   cursor: pointer;
@@ -17,4 +16,11 @@
 
 .card__like-button:hover {
   opacity: 0.6;
+}
+
+.like__like-count {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3px;
 }
