--- a/src/blocks/popup/__close/popup__close.css
+++ b/src/blocks/popup/__close/popup__close.css
@@ -1,7 +1,7 @@
 .popup__close {
   width: 35px;
   height: 35px;
-  background: transparent url('../../../images/close.svg') center no-repeat;
+  background: transparent url("../../../images/close.svg") center no-repeat;
   background-size: 35px 35px;
   border: none;
   position: absolute;
@@ -20,4 +20,9 @@
 
 .popup__close:hover {
   opacity: 0.6;
+}
+
+.popup__close-сonfirm {
+  top: -44px;
+  right: -42px;
 }
