--- a/src/blocks/popup/_is-animated/popup_is-animated.css
+++ b/src/blocks/popup/_is-animated/popup_is-animated.css
@@ -1,8 +1,4 @@
 .popup_is-animated {
     display: flex;
-    visibility: hidden;
-    opacity: 0;
-    pointer-events: none;
-    user-select: none;
-    transition: visibility 0s 0.6s, opacity 0.6s;
+    transition: visibility 0.6s, opacity 0.6s;
 }
